// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lights actions tests should return setBackLightState 1`] = `
Object {
  "type": "SET_BACK_LIGHT_STATE",
}
`;

exports[`lights actions tests should return setCabinLightState action 1`] = `
Object {
  "type": "SET_CABIN_LIGHT_STATE",
}
`;

exports[`lights actions tests should return setFrontLightState action 1`] = `
Object {
  "type": "SET_FRONT_LIGHT_STATE",
}
`;

exports[`lights actions tests should return setWagonsLightState action 1`] = `
Object {
  "type": "SET_WAGON_LIGHT_STATE",
}
`;
